Squashing bugs!

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -247,7 +247,7 @@ body {
 .editComment a {
 	font-size: .9em;
 	text-decoration: none;
-	color: black;
+	color: blue;
 }
 
 .editComment :hover {
